--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "esdoc-plugin-require-coverage",
   "version": "0.1.0",
-  "description": "",
+  "description": "ESDoc plugin to test coverage. Useful in combination with a CI service.",
   "main": "out/require-coverage.js",
   "scripts": {
     "compile": "babel src --out-dir out",
