--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-plugin-istanbul": "^3.0.0",
-    "babel-preset-node6": "^11.0.0",
+    "babel-preset-es2015": "^6.18.0",
     "babel-register": "^6.18.0",
     "esdoc": "^0.4.8",
     "eslint": "^3.12.0",
@@ -42,7 +42,7 @@
   },
   "babel": {
     "presets": [
-      "node6"
+      "es2015"
     ],
     "env": {
       "test": {
