--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-config-lsage": "^0.1.0",
     "mocha": "^3.2.0",
     "nyc": "^10.0.0",
+    "sinon": "^1.17.6",
     "unexpected": "^10.20.0"
   },
   "eslintConfig": {
