--- a/circle.yml
+++ b/circle.yml
@@ -20,6 +20,9 @@ test:
     # Lint files
     - node_modules/.bin/eslint -f junit src > $CIRCLE_TEST_REPORTS/eslint.xml
 
+    # Run babel
+    - npm run compile
+
     # Run mocha tests
     - NODE_ENV=test node_modules/.bin/nyc npm test -- --reporter mocha-circleci-reporter
     # Check coverage
@@ -28,7 +31,6 @@ test:
     - node_modules/.bin/nyc report --reporter=lcov | node_modules/.bin/codecov
 
     # Create API docs
-    - npm run compile
     - npm run docs
   post:
     # Save API docs
